crates/crochet_parser/src/snapshots/crochet_parser__types__tests__type_annotations-2.snap
---
source: crates/crochet_parser/src/types.rs
expression: "parse_type(\"(number, string) => boolean\")"
---
Lam(
    LamType {
        span: 0..27,
        params: [
            Prim(
                PrimType {
                    span: 1..7,
                    prim: Num,
                },
            ),
            Prim(
                PrimType {
                    span: 9..15,
                    prim: Str,
                },
            ),
        ],
        ret: Prim(
            PrimType {
                span: 20..27,
                prim: Bool,
            },
        ),
        type_params: None,
    },
)
