crates/crochet_parser/src/snapshots/crochet_parser__types__tests__type_annotations-4.snap
---
source: crates/crochet_parser/src/types.rs
expression: "parse_type(\"(A, B) => C | D\")"
---
Lam(
    LamType {
        span: 0..15,
        params: [
            TypeRef(
                TypeRef {
                    span: 1..2,
                    name: "A",
                    type_params: None,
                },
            ),
            TypeRef(
                TypeRef {
                    span: 4..5,
                    name: "B",
                    type_params: None,
                },
            ),
        ],
        ret: Union(
            UnionType {
                span: 10..15,
                types: [
                    TypeRef(
                        TypeRef {
                            span: 10..11,
                            name: "C",
                            type_params: None,
                        },
                    ),
                    TypeRef(
                        TypeRef {
                            span: 14..15,
                            name: "D",
                            type_params: None,
                        },
                    ),
                ],
            },
        ),
        type_params: None,
    },
)
