crates/crochet_parser/src/snapshots/crochet_parser__types__tests__type_annotations-7.snap
---
source: crates/crochet_parser/src/types.rs
expression: "parse_type(\"A & B | C & D\")"
---
Union(
    UnionType {
        span: 0..13,
        types: [
            Intersection(
                IntersectionType {
                    span: 0..5,
                    types: [
                        TypeRef(
                            TypeRef {
                                span: 0..1,
                                name: "A",
                                type_params: None,
                            },
                        ),
                        TypeRef(
                            TypeRef {
                                span: 4..5,
                                name: "B",
                                type_params: None,
                            },
                        ),
                    ],
                },
            ),
            Intersection(
                IntersectionType {
                    span: 8..13,
                    types: [
                        TypeRef(
                            TypeRef {
                                span: 8..9,
                                name: "C",
                                type_params: None,
                            },
                        ),
                        TypeRef(
                            TypeRef {
                                span: 12..13,
                                name: "D",
                                type_params: None,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
