crates/crochet_parser/src/snapshots/crochet_parser__types__tests__type_annotations.snap
---
source: crates/crochet_parser/src/types.rs
expression: "parse_type(\"Promise<number>\")"
---
TypeRef(
    TypeRef {
        span: 0..15,
        name: "Promise",
        type_params: Some(
            [
                Prim(
                    PrimType {
                        span: 8..14,
                        prim: Num,
                    },
                ),
            ],
        ),
    },
)
